# NX-ScreenUploader

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build.sh  config.ini  config.ini.template  config.json  devkita64-libnx.cmake
.github/workflows/: ci.yml  release.yml
cmake/: nx-utils.cmake  options.cmake
include/: inih.h
scripts/: build-with-time.sh  release.sh
src/: CMakeLists.txt  album.cpp  album.hpp  config.cpp  config.hpp  config_defaults.hpp  logger.hpp  main.cpp  project.h  queue.cpp  queue.hpp  upload.cpp  upload.hpp  utils.cpp  utils.hpp
